--- a/style.css
+++ b/style.css
@@ -3,36 +3,44 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
 }
 
-.header {
-  width: 100%; /*横幅いっぱい*/
-  height: 120px; /*高さ120px */
-  background-color: red; /*背景色red*/
+a {
+  text-decoration: none;
 }
 
-.header-top {
-  width: 100%; /*横幅いっぱい */
-  height: 70px; /* 高さ100px */
-  background-color: hotpink; /* 背景色hotpink */
+header {
+  width: 90% /*横幅0% */
+  padding: 15px 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.header-bottom {
-  width: 100%; /* 横幅いっぱい */
-  height: 50px; /* 高さ100px */
-  background-color: pink; /* 背景色pink */
+header .heading { /* headerタグ内のheadingクラスにのみ反映される */
+ font-size: 32px;
+}
+
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 .main-visual {
   width: 100%; /*横幅いっぱい*/
   height: 300px; /*高さ300px */
-  background-color: orange; /* 背景色orange */
 }
 
 .main-visual-content {
   width: 350px; /* 横幅350px */
   height: 300px; /* 親の高さにそろえる */
-  background-color: gold; /* 背景色gold */
 }
 
 .main {
@@ -44,18 +52,22 @@
 
 .blog {
   width: 600px; /* 横幅600px */
-  height: 1400px; /* 高さ600px */
-  background-color: limegreen;
+  height: 1400px; /* 高さ1400px */
 }
 
 .sidebar {
   width: 240px; /* 横幅240px */
-  height: 1400px; /* 高さ600px */
-  background-color: palegreen; /* 背景色palegreen */
+  height: 1400px; /* 高さ1400px */
 }
 
-.footer {
-  width: 100%; /*横幅いっぱい */
-  height: 120px; /* 高さ120px */
-  background-color: blue; /* 背景色blue */
+footer {
+  width: 100%; /* 横幅いっぱい */
+  height: 120px; /* 高さ120px */ 
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
