--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header,nav,h2, .main-visual,footer {
 }
 
 header {
-  width: 90% /*横幅90% */
+  width: 90%; /*横幅90% */
   padding: 15px 0;
   margin: 0 auto;
   text-align: center;
